--- a/Attendance-FIU-guide.html
+++ b/Attendance-FIU-guide.html
@@ -58,7 +58,15 @@
             .steps-list a:hover {
                 text-decoration: underline;
             }
- 
+            
+            /* Social buttons */
+            .social-buttons a {
+                margin: 5px;
+            }
+            .social-buttons a:hover {
+                transform: scale(1.1);
+                transition: transform 0.2s ease-in-out;
+            }
             
         </style>
     </head>
