--- a/all-tropical-spring-hack25.html
+++ b/all-tropical-spring-hack25.html
@@ -162,6 +162,7 @@
                 .benefits-list li {
                     margin: 5px 0;
                 }
+                /* Social buttons */
                 .social-buttons a {
                     margin: 5px;
                 }
@@ -251,18 +252,18 @@
     <div class="container px-lg-5">
         
         <!-- Become a Member Section -->
-        <h1 class="display-5 fw-bold member-section">Code Crunch - Tropical Spring Hack</h1>
+        <h1 class="display-5 fw-bold member-section">Code Crunch - Tropical Spring Hack | SPRING 2025</h1>
         <p class="center-text">
             Hack your way into the spring vibes! Let Miami's tropical energy inspire your next big idea in this vibrant hackathon.
         </p>
         <p class="card-text">
             <strong>Workshops:</strong> Daily sessions from Monday to Friday to prep you for the big weekend.
-            <strong>Hackathon:</strong> Starts on <strong>Friday, March 14, 2026, at 7 PM</strong> and ends on <strong>Sunday, March 16, 2026, at 7 PM</strong>.
+            <strong>Hackathon:</strong> Starts on <strong>Friday, March 28, 2025, at 9 AM</strong> and ends on <strong>Sunday, March 30, 2025, at 5 PM</strong>.
         </p>
         <p class="card-text">
             Dive into the tropical Miami spirit, code with fellow innovators, and let your ideas bloom this spring.
         </p>
-
+        <p style="text-align: center;">Applications open December 2024</p>
 
 
         <!-- Page Cards -->
