--- a/all-tropical-spring-hack26.html
+++ b/all-tropical-spring-hack26.html
@@ -146,31 +146,31 @@
 
 
 
-            .center-text {
-        text-align: center;
-        padding: 10px;
-    }
-    .member-section {
-        text-align: center;
-        padding: 20px;
-    }
-    .benefits-list {
-        list-style-type: none;
-        padding: 0;
-        text-align: center;
-    }
-    .benefits-list li {
-        margin: 5px 0;
-    }
+                        .center-text {
+                    text-align: center;
+                    padding: 10px;
+                }
+                .member-section {
+                    text-align: center;
+                    padding: 20px;
+                }
+                .benefits-list {
+                    list-style-type: none;
+                    padding: 0;
+                    text-align: center;
+                }
+                .benefits-list li {
+                    margin: 5px 0;
+                }
+                /* Social buttons */
+                .social-buttons a {
+                    margin: 5px;
+                }
+                .social-buttons a:hover {
+                    transform: scale(1.1);
+                    transition: transform 0.2s ease-in-out;
+                }
 
-    /* Social buttons */
-    .social-buttons a {
-        margin: 5px;
-    }
-    .social-buttons a:hover {
-        transform: scale(1.1);
-        transition: transform 0.2s ease-in-out;
-    }
 
 
 
@@ -252,36 +252,34 @@
     <div class="container px-lg-5">
         
         <!-- Become a Member Section -->
-        <h1 class="display-5 fw-bold member-section">Become a member</h1>
+        <h1 class="display-5 fw-bold member-section">Code Crunch - Tropical Spring Hack | SPRING 2026</h1>
         <p class="center-text">
-            Join our club to gain access to exclusive events, resources, and a community of like-minded peers.
+            Hack your way into the spring vibes! Let Miami's tropical energy inspire your next big idea in this vibrant hackathon.
         </p>
-
-        <h3 class="member-section">After Sign-Up:</h3>
-        <p class="center-text">
-            Upon submitting the form, you will receive a welcome email that includes:
+        <p class="card-text">
+            <strong>Workshops:</strong> Daily sessions from Monday to Friday to prep you for the big weekend.  
+            <strong>Hackathon:</strong> Starts on <strong>Friday, March 27, 2026, at 9 AM</strong> and ends on <strong>Sunday, March 29, 2026, at 5 PM</strong>.
         </p>
-        <ul class="benefits-list">
-            <li>🎉 Link to join our Discord community.</li>
-            <li>🔗 Link to join Code Crunch on Panther Connect.</li>
-            <li>📂 Google Drive folder access granted weekly.</li>
-           <!--     <li>📝 Notion workspace access granted weekly (next Monday).</li>        -->
-        </ul>
+        <p class="card-text">
+            Dive into the tropical Miami spirit, code with fellow innovators, and let your ideas bloom this spring.
+        </p>
+        <p style="text-align: center;">Applications open December 2025</p>
 
-        <!-- Membership Cards -->
+
+        <!-- Page Cards -->
         <div class="row gx-lg-5">
             
             <!-- Code Crunch at FIU Card -->
             <div class="col-lg-6 mb-5">
                 <div class="card bg-light border-0 h-100 shadow-sm">
                     <div class="card-body text-center p-4 p-lg-5">
-                        <h2 class="fs-4 fw-bold">Membership for FIU Students</h2>
+                        <h2 class="fs-4 fw-bold">Registration for FIU Students</h2>
                         <a 
                            class="btn btn-primary btn-lg mt-3" 
-                           href="https://forms.office.com/r/JEbApqq0U9" 
+                           href="#" 
                            target="_blank" 
                            aria-label="Join Code Crunch for FIU Students">
-                            Join here
+                           Register Now
                         </a>
                     </div>
                 </div>
@@ -291,13 +289,13 @@
             <div class="col-lg-6 mb-5">
                 <div class="card bg-light border-0 h-100 shadow-sm">
                     <div class="card-body text-center p-4 p-lg-5">
-                        <h2 class="fs-4 fw-bold">Membership for Any University Student</h2>
+                        <h2 class="fs-4 fw-bold">Registration for Any University Student</h2>
                         <a 
                            class="btn btn-primary btn-lg mt-3" 
-                           href="https://forms.gle/ha9NMpfbJi4Gp7ds5" 
+                           href="#" 
                            target="_blank" 
                            aria-label="Join Code Crunch for University Students Worldwide">
-                            Join here
+                           Register Now
                         </a>
                     </div>
                 </div>
