--- a/events.html
+++ b/events.html
@@ -107,6 +107,15 @@
             margin: 0 auto; /* Centers the iframe */
         }
 
+        /* Social buttons */
+        .social-buttons a {
+            margin: 5px;
+        }
+        .social-buttons a:hover {
+            transform: scale(1.1);
+            transition: transform 0.2s ease-in-out;
+        }
+
         /* <div class="divider"></div> */
     </style>
 </head>
