--- a/about.html
+++ b/about.html
@@ -50,6 +50,17 @@
             font-size: 150px;
             color: gray;
         }
+
+
+        /* Social buttons */
+        .social-buttons a {
+            margin: 5px;
+        }
+        .social-buttons a:hover {
+            transform: scale(1.1);
+            transition: transform 0.2s ease-in-out;
+        }
+
     </style>
 </head>
 <body>
