--- a/all-305-Hackathon25.html
+++ b/all-305-Hackathon25.html
@@ -162,6 +162,7 @@
                 .benefits-list li {
                     margin: 5px 0;
                 }
+                /* Social buttons */
                 .social-buttons a {
                     margin: 5px;
                 }
@@ -251,17 +252,18 @@
     <div class="container px-lg-5">
         
         <!-- Become a Member Section -->
-        <h1 class="display-5 fw-bold member-section">Code Crunch - 305 Hackathon</h1>
+        <h1 class="display-5 fw-bold member-section">Code Crunch - 305 Hackathon | FALL 2025</h1>
         <p class="center-text">
             Represent the 305! Join us for a weekend of innovation, collaboration, and creativity right from Miami’s vibrant tech scene.
         </p>
         <p class="card-text">
             <strong>Workshops:</strong> Daily sessions from Monday to Friday to sharpen your skills.  
-            <strong>Hackathon:</strong> Starts on <strong>Friday, September 12, 2025, at 7 PM</strong> and ends on <strong>Sunday, September 14, 2025, at 7 PM</strong>.
+            <strong>Hackathon:</strong> Starts on <strong>Friday, September 12, 2025, at 9 AM</strong> and ends on <strong>Sunday, September 14, 2025, at 5 PM</strong>.
         </p>
         <p class="card-text">
             Bring your A-game and showcase your skills in the heart of the 305. Whether you’re a beginner or a pro, this hackathon is for everyone!
         </p>
+        <p style="text-align: center;">Applications open March 2025</p>
 
 
 
