--- a/all-feedback.html
+++ b/all-feedback.html
@@ -162,6 +162,7 @@
     .benefits-list li {
         margin: 5px 0;
     }
+    /* Social buttons */
     .social-buttons a {
         margin: 5px;
     }
