--- a/contact.html
+++ b/contact.html
@@ -40,6 +40,16 @@
             .contact-button {
                 margin-bottom: 20px; /* Adds space below the button */
             }
+
+            /* Social buttons */
+            .social-buttons a {
+                margin: 5px;
+            }
+            .social-buttons a:hover {
+                transform: scale(1.1);
+                transition: transform 0.2s ease-in-out;
+            }
+
         </style>
     </head>
     <body>
