--- a/all-tropical-spring-hack25.html
+++ b/all-tropical-spring-hack25.html
@@ -252,7 +252,7 @@
     <div class="container px-lg-5">
         
         <!-- Become a Member Section -->
-        <h1 class="display-5 fw-bold member-section">Code Crunch - Tropical Spring Hack | SPRING 2025</h1>
+        <h1 class="display-5 fw-bold member-section">Code Crunch - Tropical Spring Hack |SPRING 2025</h1>
         <p class="center-text">
             Hack your way into the spring vibes! Let Miami's tropical energy inspire your next big idea in this vibrant hackathon.
         </p>
@@ -265,7 +265,6 @@
         </p>
         <p style="text-align: center;">Applications open December 2024</p>
 
-
         <!-- Page Cards -->
         <div class="row gx-lg-5">
             
@@ -276,7 +275,7 @@
                         <h2 class="fs-4 fw-bold">Registration for FIU Students</h2>
                         <a 
                            class="btn btn-primary btn-lg mt-3" 
-                           href="#" 
+                           href="https://forms.office.com/r/bCCWeeF4W3" 
                            target="_blank" 
                            aria-label="Join Code Crunch for FIU Students">
                            Register Now
@@ -292,7 +291,7 @@
                         <h2 class="fs-4 fw-bold">Registration for Any University Student</h2>
                         <a 
                            class="btn btn-primary btn-lg mt-3" 
-                           href="#" 
+                           href="https://forms.office.com/r/GPibPyCy0Q" 
                            target="_blank" 
                            aria-label="Join Code Crunch for University Students Worldwide">
                            Register Now
