--- a/about.html
+++ b/about.html
@@ -89,27 +89,31 @@
             <div class="p-4 p-lg-5 rounded-3 text-center">
                 <h1 class="display-5 fw-bold">About Code Crunch</h1>
                 <p class="fs-4">Your go-to place for FIU students to connect through coding, collaboration, and community</p>
+                
+                
                 <!-- Social Media Links -->
-                <div class="d-flex justify-content-center mt-3">
-                    <a href="https://www.linkedin.com/company/code-crunch-club/" class="btn btn-primary mx-2" aria-label="LinkedIn">
+                <div class="social-buttons">
+                    <a href="https://www.linkedin.com/company/code-crunch-club/" class="btn btn-primary" aria-label="LinkedIn">
                         <i class="bi bi-linkedin"></i> LinkedIn
                     </a>
-                    <a href="https://www.instagram.com/codecrunchclub/" class="btn btn-danger mx-2" aria-label="Instagram">
+                    <a href="https://www.instagram.com/codecrunchclub/" class="btn btn-danger" aria-label="Instagram">
                         <i class="bi bi-instagram"></i> Instagram
                     </a>
-                    <a href="https://forms.office.com/r/M5itd5FK32" class="btn btn-success mx-2" aria-label="WhatsApp">
+                    <a href="https://forms.office.com/r/M5itd5FK32" class="btn btn-success" aria-label="WhatsApp">
                         <i class="bi bi-whatsapp"></i> WhatsApp
                     </a>
-                    <a href="https://forms.office.com/r/JEbApqq0U9" class="btn btn-secondary mx-2" aria-label="Discord">
+                    <a href="https://forms.office.com/r/JEbApqq0U9" class="btn btn-secondary" aria-label="Discord">
                         <i class="bi bi-discord"></i> Discord
                     </a>
-                    <a href="https://fiu.campuslabs.com/engage/organization/codecrunch" class="btn btn-warning mx-2" aria-label="Panther Connect">
+                    <a href="https://fiu.campuslabs.com/engage/organization/codecrunch" class="btn btn-warning" aria-label="Panther Connect">
                         <i class="bi bi-university"></i> Panther Connect
                     </a>
-                    <a href="https://linktr.ee/CODE.CRUNCH" class="btn btn-dark mx-2" aria-label="Linktree">
+                    <a href="https://linktr.ee/CODE.CRUNCH" class="btn btn-dark" aria-label="Linktree">
                         <i class="bi bi-link"></i> Linktree
                     </a>
                 </div>
+
+
             </div>
         </div>
     </header>
