--- a/about.html
+++ b/about.html
@@ -279,7 +279,8 @@
                             <h5 class="fw-bold">Jason Jiang</h5>
                             <p class="mb-0">Logistics Chair 2 & Industry chair</p>
                             <p class="mt-3">Senior @FIU majoring in Computer Science.</p>
-                            <p class="mt-3">Graduation date: May 2025</p>
+                            <p class="mt-3">Graduation Date: May 2025</p>
+                            <p class="mt-3">Jason was born in New York and is of Chinese origin. He has spent most of his life in Florida and appreciates the lifestyle it offers. Jason is currently exploring the tech world and is focused on personal growth through various opportunities and experiences. He aspires to achieve success and build a fulfilling future.</p>
                             <a href="https://www.linkedin.com/in/jasonjiangexperience/" target="_blank" class="linkedin-icon">
                                 <i class="bi bi-linkedin"></i> LinkedIn
                             </a>
