--- a/about.html
+++ b/about.html
@@ -171,7 +171,9 @@
                         <div class="card-body">
                             <h5 class="fw-bold">Daniel Hernandez</h5>
                             <p class="mb-0">Vice President & Tech Lead C5</p>
-                            <p class="mt-3">Senior @FIU majoring in Computer Science.</p>
+                            
+                            <p class="mt-3">Graduate student @FIU, majoring in Computer Science.</p>
+                            <p class="mt-3">Graduation Date: B.Sc. in Computer Science, December 2024</p>
                             <a href="https://www.linkedin.com/in/daniel-hernandez-10203b24a/" target="_blank" class="linkedin-icon">
                                 <i class="bi bi-linkedin"></i> LinkedIn
                             </a>
