--- a/about.html
+++ b/about.html
@@ -173,7 +173,7 @@
                             <p class="mb-0">Vice President & Tech Lead C5</p>
                             
                             <p class="mt-3">Graduate student @FIU, majoring in Computer Science.</p>
-                            <p class="mt-3">Graduation Date: B.Sc. in Computer Science, December 2024</p>
+                            <p class="mt-3">B.Sc. in Computer Science, December 2024</p>
                             <a href="https://www.linkedin.com/in/daniel-hernandez-10203b24a/" target="_blank" class="linkedin-icon">
                                 <i class="bi bi-linkedin"></i> LinkedIn
                             </a>
