--- a/about.html
+++ b/about.html
@@ -196,6 +196,25 @@
                         </div>
                     </div>
                 </div>
+
+
+                <!-- Alvise no pic https://github.com/user-attachments/assets/f331597a-f649-4694-b768-d971e5a29f7a -->
+                <div class="col-lg-3 col-md-6 mb-5">
+                    <div class="card bg-light border-0 h-100">
+                        <img class="card-img-top" src="https://github.com/user-attachments/assets/ff5dcc32-7df0-4aec-98b5-88358795fa16" alt="Daniel Hernandez - Vice President" />
+                        <div class="card-body">
+                            <h5 class="fw-bold">Alvise Carpin</h5>
+                            <p class="mb-0">Tech Lead C1/C2/C3/C4</p>
+                            
+                            <p class="mt-3">Graduate student @FIU, majoring in Computer Science.</p>
+                            <p class="mt-3">B.A. in Computer Science, December 2024</p>
+                            <p class="mt-3">Alvise has a passion for solving complex problems and helping others. Outside of coding, he enjoys working out and reading in his free time.</p>
+                            <a href="https://www.linkedin.com/in/alvisec/" target="_blank" class="linkedin-icon">
+                                <i class="bi bi-linkedin"></i> LinkedIn
+                            </a>
+                        </div>
+                    </div>
+                </div>
                 <!-- Arnold -->
                 <div class="col-lg-3 col-md-6 mb-5">
                     <div class="card bg-light border-0 h-100">
