--- a/index.html
+++ b/index.html
@@ -339,6 +339,14 @@
                 <div class="card-header bg-success text-white">
                     <h3>Code Crunch - Tropical Spring Hack | SPRING 2025</h3>
                 </div>
+
+                <div class="container px-lg-5 text-center">
+                    <h2 class="fw-bold mb-4"</h2>
+                    <img src="https://github.com/user-attachments/assets/f61e26a9-3cec-4578-8746-4283a39b9b71" alt="Photo" class="img-fluid rounded" />
+                </div>
+
+
+
                 <div class="card-body">
                     <h4 class="card-title">Spring 2025 Hackathon</h4>
                     <p class="card-text">
