--- a/all-tropical-spring-hack25.html
+++ b/all-tropical-spring-hack25.html
@@ -250,7 +250,7 @@
         <section class="group-photo py-5">
             <div class="container px-lg-5 text-center">
                 <h2 class="fw-bold mb-4"> </h2>
-                <img src="https://github.com/user-attachments/assets/dee41bbe-d6a7-4d28-9feb-91696e4476ce" alt="Code Crunch Club Group Photo" class="img-fluid rounded" />
+                <img src="https://github.com/user-attachments/assets/f61e26a9-3cec-4578-8746-4283a39b9b71" alt="hackathon Photo Section" class="img-fluid rounded" />
             </div>
         </section>
 
