--- a/about.html
+++ b/about.html
@@ -283,7 +283,18 @@
                             <h5 class="fw-bold">Thierry Laguerre</h5>
                             <p class="mb-0">Tech Lead C8</p>
                             <p class="mt-3">FIU @FIU majoring in Computer Science.</p>
-                         
+                            <p class="mt-3">Thierry Laguerre is a driven Computer Science student at
+                                Florida International University with a strong academic
+                                record. He has gained hands-on experience in database
+                                management, web development, and UI/UX design
+                                through work with the FDA and Miami Dade County Public
+                                Schools. As an active leader, he contributes to myBonum
+                                Healthcare and Phi Theta Kappa, driving community
+                                initiatives. Thierry’s commitment to academic excellence
+                                and service has earned him numerous honors, including a
+                                nomination for the 2024 Newman Civic Fellowship. He is
+                                passionate about leveraging technology to create
+                                meaningful solutions.</p>
                             <a href="https://www.linkedin.com/in/thierrylaguerre/" target="_blank" class="linkedin-icon">
                                 <i class="bi bi-linkedin"></i> LinkedIn
                             </a>
@@ -334,6 +345,7 @@
                             <h5 class="fw-bold">Bryan Garcia</h5>
                             <p class="mb-0">Treasurer & RSOC Representative</p>
                             <p class="mt-3">Rising Junior @FIU majoring in Computer Science.</p>
+                            <p class="mt-3">Bryan is a junior studying Information Technology at Florida International University, focusing on programming, software development, and leveraging emerging technologies like AI and VR. His experience includes working on open-source projects, such as resolving input errors using Java and Docker, and participating in hackathons where he enhanced his problem-solving and collaboration skills.</p>
                             <a href="https://www.linkedin.com/in/bryan-bg-garcia/" target="_blank" class="linkedin-icon">
                                 <i class="bi bi-linkedin"></i> LinkedIn
                             </a>
