--- a/about.html
+++ b/about.html
@@ -141,6 +141,7 @@
                         <div class="card-body">
                             <h5 class="fw-bold">Brian Bazurto</h5>
                             <p class="mb-0">President & Founder</p>
+                            <p class="mb-2 text-muted">Pronouns: He/Him/They/Them</p> <!-- Pronouns added here -->
                             <p class="mt-3">Rising Junior @FIU majoring in Computer Science with a minor in Actuarial Studies.</p>
                             <p class="mt-3">I’m passionate about technology and how it can bring people together, which is why I founded the Code Crunch Club to create a space where students can learn, grow, and support each other in their coding journeys. Outside of school, I spend time volunteering at animal shelters, exploring Miami’s amazing food scene, and connecting with others who share my love for building things that make a difference. I believe in creating opportunities and uplifting those around me.</p>
                             <a href="https://www.linkedin.com/in/IBA001" target="_blank" class="linkedin-icon">
@@ -156,6 +157,7 @@
                         <div class="card-body">
                             <h5 class="fw-bold">Amilcar Pena</h5>
                             <p class="mb-0">Vice President & Tech Lead C1 | C2</p>
+                            <p class="mb-2 text-muted">Pronouns: He/Him</p> <!-- Pronouns added here -->
                             <p class="mt-3">Rising Junior @FIU majoring in Computer Science.</p>
                             <a href="https://www.linkedin.com/in/amilcarjpena/" target="_blank" class="linkedin-icon">
                                 <i class="bi bi-linkedin"></i> LinkedIn
@@ -171,7 +173,7 @@
                         <div class="card-body">
                             <h5 class="fw-bold">Daniel Hernandez</h5>
                             <p class="mb-0">Vice President & Tech Lead C5</p>
-                            
+                            <p class="mb-2 text-muted">Pronouns: He/Him</p> <!-- Pronouns added here -->
                             <p class="mt-3">Graduate student @FIU, majoring in Computer Science.</p>
                             <p class="mt-3">B.Sc. in Computer Science, December 2024</p>
                             <a href="https://www.linkedin.com/in/daniel-hernandez-10203b24a/" target="_blank" class="linkedin-icon">
@@ -188,6 +190,7 @@
                         <div class="card-body">
                             <h5 class="fw-bold">Mariana Phelan</h5>
                             <p class="mb-0">Tech Lead C3 | C4 </p>
+                            <p class="mb-2 text-muted">Pronouns: She/Her</p> <!-- Pronouns added here -->
                             <p class="mt-3">Junior @FIU majoring in Computer Science.</p>
                             <p class="mt-3">Born and raised in Caracas, Venezuela. Hope to become the best version of herself and also a Software Engineer at one of the big tech companies like Apple, Google, or Microsoft. In 10 years from now I hope to become the CEO of my own tech company, and travel around the world meeting new people and new cultures!</p>
                             <a href="https://www.linkedin.com/in/mariana-phelan-b7a380238/" target="_blank" class="linkedin-icon">
@@ -205,7 +208,7 @@
                         <div class="card-body">
                             <h5 class="fw-bold">Alvise Carpin</h5>
                             <p class="mb-0">Tech Lead C1/C2/C3/C4</p>
-                            
+                            <p class="mb-2 text-muted">Pronouns: He/Him</p> <!-- Pronouns added here -->
                             <p class="mt-3">Graduate student @FIU, majoring in Computer Science.</p>
                             <p class="mt-3">B.A. in Computer Science, December 2024</p>
                             <p class="mt-3">Alvise has a passion for solving complex problems and helping others. Outside of coding, he enjoys working out and reading in his free time.</p>
@@ -222,6 +225,7 @@
                         <div class="card-body">
                             <h5 class="fw-bold">Arnold Miranda-Pino</h5>
                             <p class="mb-0">Tech Lead C3 | C4 </p>
+                            <p class="mb-2 text-muted">Pronouns: He/Him</p> <!-- Pronouns added here -->
                             <p class="mt-3">Junior @FIU majoring in Computer Science.</p>
                             <a href="https://www.linkedin.com/in/arnold-miranda-pino/" target="_blank" class="linkedin-icon">
                                 <i class="bi bi-linkedin"></i> LinkedIn
@@ -236,7 +240,8 @@
                         <div class="card-body">
                             <h5 class="fw-bold">Sara Salvatierra</h5>
                             <p class="mb-0">Tech Lead C6</p>
-                            <p class="mt-3">FIU majoring in Computer Science.</p>
+                            <p class="mb-2 text-muted">Pronouns: She/Her</p> <!-- Pronouns added here -->
+                            <p class="mt-3">FIU student majoring in Computer Science.</p>
                             <a href="https://www.linkedin.com/in/sarasalvatierra/" target="_blank" class="linkedin-icon">
                                 <i class="bi bi-linkedin"></i> LinkedIn
                             </a>
@@ -252,7 +257,8 @@
                         <div class="card-body">
                             <h5 class="fw-bold">Gabriel Nogueras</h5>
                             <p class="mb-0">Tech Lead C7 </p>
-                            <p class="mt-3">FIU majoring in Computer Science.</p>
+                            <p class="mb-2 text-muted">Pronouns: He/Him</p> <!-- Pronouns added here -->
+                            <p class="mt-3">FIU student majoring in Computer Science.</p>
                             <a href="https://www.linkedin.com/in/gabrielnogueras/" target="_blank" class="linkedin-icon">
                                 <i class="bi bi-linkedin"></i> LinkedIn
                             </a>
@@ -267,7 +273,9 @@
                         <div class="card-body">
                             <h5 class="fw-bold">Justin Joseph</h5>
                             <p class="mb-0">Tech Lead C6</p>
-                            <p class="mt-3">FIU majoring in Computer Science.</p>
+                            <p class="mb-2 text-muted">Pronouns: He/Him</p> <!-- Pronouns added here -->
+                            <p class="mt-3">FIU student majoring in Computer Science.</p>
+                            <p class="mt-3">Born and raised in Florida, Justin Joseph is a sophomore at Florida International University, majoring in Computer Science with a minor in Mathematical Sciences. Passionate about technology, he has a particular interest in cybersecurity and web development, fields that challenge his problem-solving skills and creativity. He remains eager to learn and explore new concepts, constantly striving for personal and professional growth.</p>
                             <a href="https://www.linkedin.com/in/jjosephe/" target="_blank" class="linkedin-icon">
                                 <i class="bi bi-linkedin"></i> LinkedIn
                             </a>
@@ -282,7 +290,8 @@
                         <div class="card-body">
                             <h5 class="fw-bold">Thierry Laguerre</h5>
                             <p class="mb-0">Tech Lead C8</p>
-                            <p class="mt-3">FIU @FIU majoring in Computer Science.</p>
+                            <p class="mb-2 text-muted">Pronouns: He/Him</p> <!-- Pronouns added here -->
+                            <p class="mt-3">FIU student majoring in Computer Science.</p>
                             <p class="mt-3">Thierry Laguerre is a driven Computer Science student at
                                 Florida International University with a strong academic
                                 record. He has gained hands-on experience in database
@@ -310,8 +319,8 @@
                         <div class="card-body">
                             <h5 class="fw-bold">Jason Jiang</h5>
                             <p class="mb-0">Logistics Chair 2 & Industry chair</p>
+                            <p class="mb-2 text-muted">Pronouns: He/Him</p> <!-- Pronouns added here -->
                             <p class="mt-3">Senior @FIU majoring in Computer Science.</p>
-                            <p class="mt-3">Graduation Date: May 2025</p>
                             <p class="mt-3">Jason was born in New York and is of Chinese origin. He has spent most of his life in Florida and appreciates the lifestyle it offers. Jason is currently exploring the tech world and is focused on personal growth through various opportunities and experiences. He aspires to achieve success and build a fulfilling future.</p>
                             <a href="https://www.linkedin.com/in/jasonjiangexperience/" target="_blank" class="linkedin-icon">
                                 <i class="bi bi-linkedin"></i> LinkedIn
@@ -330,6 +339,7 @@
                         <div class="card-body">
                             <h5 class="fw-bold">Henry Cruz</h5>
                             <p class="mb-0">Logistics Chair 1 & Marketing chair</p>
+                            <p class="mb-2 text-muted">Pronouns: He/Him</p> <!-- Pronouns added here -->
                             <p class="mt-3">Junior @FIU majoring in Computer Science.</p>
                             <a href="https://www.linkedin.com/in/henrycruz03/" target="_blank" class="linkedin-icon">
                                 <i class="bi bi-linkedin"></i> LinkedIn
@@ -344,6 +354,7 @@
                         <div class="card-body">
                             <h5 class="fw-bold">Bryan Garcia</h5>
                             <p class="mb-0">Treasurer & RSOC Representative</p>
+                            <p class="mb-2 text-muted">Pronouns: He/Him</p> <!-- Pronouns added here -->
                             <p class="mt-3">Rising Junior @FIU majoring in Computer Science.</p>
                             <p class="mt-3">Bryan is a junior studying Information Technology at Florida International University, focusing on programming, software development, and leveraging emerging technologies like AI and VR. His experience includes working on open-source projects, such as resolving input errors using Java and Docker, and participating in hackathons where he enhanced his problem-solving and collaboration skills.</p>
                             <a href="https://www.linkedin.com/in/bryan-bg-garcia/" target="_blank" class="linkedin-icon">
