--- a/all-become-a-member.html
+++ b/all-become-a-member.html
@@ -203,6 +203,7 @@
                         <li class="nav-item">
                             <a class="nav-link" href="events.html">Events</a>
                         </li>
+                        <li class="nav-item"><a class="nav-link" href="SWE-CONVOS.html">SWE-CONVOS & Schedules</a></li>
                         <li class="nav-item">
                             <a class="nav-link" href="contact.html">Contact</a>
                         </li>
