--- a/events.html
+++ b/events.html
@@ -135,6 +135,7 @@
                     <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
                     <li class="nav-item"><a class="nav-link" href="about.html">About</a></li>
                     <li class="nav-item"><a class="nav-link active" aria-current="page" href="events.html">Events</a></li>
+                    <li class="nav-item"><a class="nav-link" href="SWE-CONVOS.html">SWE-CONVOS & Schedules</a></li>
                     <li class="nav-item"><a class="nav-link " href="contact.html">Contact</a></li>
                 </ul>
             </div>
