--- a/SWE-CONVOS.html
+++ b/SWE-CONVOS.html
@@ -309,7 +309,7 @@
    <!-- Section 1: Semester Schedule -->
    <section class="content-section">
     <h1 class="text-center">Code Crunch Weekly Schedule - Spring 2025</h1>
-    <img src="https://github.com/user-attachments/assets/c87c187f-99eb-4027-8156-62cab2b8251d" alt="Semester Schedule" class="img-fluid mx-auto d-block" />
+    <img src="https://github.com/user-attachments/assets/cbab914b-ba7d-4ba2-a011-0fa6286ee0da" alt="Semester Schedule" class="img-fluid mx-auto d-block" />
 </section>
 
 <!-- Section 2: Current and Upcoming SWE Convos -->
@@ -355,7 +355,7 @@
             date: '2025-1-24'
         },
         {
-            title: '🚀 C9 | WK4: SWE Convos - SWE @ AMAZON - SPRING 2025',
+            title: '🚀 C9 | WK4: SWE Convos - SWE @ AMAZON | Spring 2025 🚀Open to All University Students!',
             location: 'Monday, February 3, 2025 @ 8:30 PM - 9:30 PM EST - RSVP & find the location on <a href="https://lu.ma/CODECRUNCH" target="_blank">Luma</a>',
             imageUrl: 'https://github.com/user-attachments/assets/0f51043e-8e7f-49c2-898c-ab6d2924b3c6',
             date: '2025-02-03'
