--- a/SWE-CONVOS.html
+++ b/SWE-CONVOS.html
@@ -355,6 +355,12 @@
             date: '2025-1-24'
         },
         {
+            title: '💻 📚 C9 | WK3: SWE CONVOS WITH Digi Dash | Spring 2025 🚀 Open to All University Students!',
+            location: 'Friday, Jan 31 2:00 PM - 3:00 PM EST - RSVP & find the location on <a href="https://lu.ma/CODECRUNCH" target="_blank">Luma</a>',
+            imageUrl: 'https://github.com/user-attachments/assets/ae912cb7-d0fa-4232-8a84-a227d16ff2a4',
+            date: '2025-01-31'
+        },
+        {
             title: '🚀 C9 | WK4: SWE Convos - SWE @ AMAZON | Spring 2025 🚀Open to All University Students!',
             location: 'Monday, February 3, 2025 @ 8:30 PM - 9:30 PM EST - RSVP & find the location on <a href="https://lu.ma/CODECRUNCH" target="_blank">Luma</a>',
             imageUrl: 'https://github.com/user-attachments/assets/0f51043e-8e7f-49c2-898c-ab6d2924b3c6',
