--- a/SWE-CONVOS.html
+++ b/SWE-CONVOS.html
@@ -368,7 +368,7 @@
         },
       
         {
-            title: 'SWE Convos with Google Software Engineer | Location: GC Room 305 (Virtual event, streamed in-person and on Zoom)',
+            title: 'SWE Convos - SWE @  Google | Fall 2024 🚀Open to All University Students!',
             location: 'Date: Friday, November 8 4:00 PM - 5:00 PM - RSVP & find the location on <a href="https://lu.ma/CODECRUNCH" target="_blank">Luma</a>',
             imageUrl: 'https://github.com/user-attachments/assets/33eb5e30-556e-4adc-8c13-5dd86aac574c',
             date: '2024-11-08'
