--- a/about.html
+++ b/about.html
@@ -228,6 +228,7 @@
                             <p class="mb-0">Tech Lead C3 | C4 </p>
                             <p class="mb-2 text-muted">Pronouns: He/Him</p> <!-- Pronouns added here -->
                             <p class="mt-3">Junior @FIU majoring in Computer Science.</p>
+                            <p class="mt-3">Arnold Miranda, of Cuban descent, is a junior at Florida International University studying Computer Science. Passionate about web and app development, he enjoys working with TypeScript and constantly seeks to grow his skills. Arnold has supported newer students with valuable guidance and helped design a semester-long mobile app development workshop. He approaches challenges using Agile methods, driven by a love for learning and collaboration.</p>
                             <a href="https://www.linkedin.com/in/arnold-miranda-pino/" target="_blank" class="linkedin-icon">
                                 <i class="bi bi-linkedin"></i> LinkedIn
                             </a>
