--- a/SWE-CONVOS.html
+++ b/SWE-CONVOS.html
@@ -256,8 +256,10 @@
                             <a class="nav-link" href="events.html">Events</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link active" aria-current="page" href="SWE-CONVOS.html">SWE-CONVOS & Schedules</a>
+                            <a class="nav-link active" aria-current="page" href="SWE-CONVOS.html">SWE CONVOS </a>
                         </li>
+                
+                        <li class="nav-item"><a class="nav-link " href="SCHDEULES.html">Schedules</a></li>
                         <li class="nav-item">
                             <a class="nav-link" href="contact.html">Contact</a>
                         </li>
@@ -307,10 +309,10 @@
 
 
    <!-- Section 1: Semester Schedule -->
-   <section class="content-section">
+   <!-- <section class="content-section">
     <h1 class="text-center">Code Crunch Weekly Schedule - Spring 2025</h1>
     <img src="https://github.com/user-attachments/assets/cbab914b-ba7d-4ba2-a011-0fa6286ee0da" alt="Semester Schedule" class="img-fluid mx-auto d-block" />
-</section>
+</section> -->
 
 <!-- Section 2: Current and Upcoming SWE Convos -->
 <section class="content-section">
