--- a/index.html
+++ b/index.html
@@ -177,7 +177,8 @@
                         <li class="nav-item">
                             <a class="nav-link" href="events.html">Events</a>
                         </li>
-                        <li class="nav-item"><a class="nav-link" href="SWE-CONVOS.html">SWE-CONVOS & Schedules</a></li>        
+                        <li class="nav-item"><a class="nav-link" href="SWE-CONVOS.html">SWE-CONVOS</a></li>
+                        <li class="nav-item"><a class="nav-link " href="SCHDEULES.html">Schedules</a></li>     
                         <li class="nav-item">
                             <a class="nav-link" href="contact.html">Contact</a>
                         </li>
