--- a/about.html
+++ b/about.html
@@ -245,6 +245,7 @@
                             <p class="mb-0">Tech Lead C6</p>
                             <p class="mb-2 text-muted">Pronouns: She/Her</p> <!-- Pronouns added here -->
                             <p class="mt-3">FIU student majoring in Computer Science.</p>
+                            <p class="mt-3">Sara Salvatierra, originally from Caracas, Venezuela, is passionate about creating simple solutions to complex problems and helping others unlock their potential, particularly in cybersecurity. She has worked on exciting projects, including developing the front-end of a web3 marketing platform and creating an Instagram filter with over 1.7 million impressions. Outside of tech, Sara enjoys staying active through tennis, gym workouts, and exploring local restaurants, which she features on her foodie Instagram, @partyxtwo. Guided by the philosophy that success comes to those who seek it, Sara strives to make a meaningful impact by using technology to simplify lives.</p>
                             <a href="https://www.linkedin.com/in/sarasalvatierra/" target="_blank" class="linkedin-icon">
                                 <i class="bi bi-linkedin"></i> LinkedIn
                             </a>
